documenting how bert is trained

--- a/bert.ipynb
+++ b/bert.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
       "12 2\n",
       "6 2\n",
       "3 2\n",
-      "[2, 2, 2, 2, 2, 2, 2, 2, 3] 2^8*3^1\n"
+      "2^8 * 3^1\n"
      ]
     }
    ],
@@ -64,8 +64,59 @@
     "\n",
     "\n",
     "f, exponents = factorise(768)\n",
-    "print(f, ' * '.join(f'{i}^{exp}' for i, exp in exponents.items()))\n"
+    "print( ' * '.join(f'{i}^{exp}' for i, exp in exponents.items()))\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## BERT_base\n",
+    "\n",
+    "### Layers\n",
+    "Sequential([\n",
+    "12 Encoders blocks\n",
+    "Linear layer only for the first token [CLS] (1,hidden)\n",
+    "Linear (hidden, vocab_size)\n",
+    "Softmax layer\n",
+    "])\n",
+    "Encoder block:\n",
+    "Sequential([\n",
+    "    MultiHeadAttention( 12 heads, 768 dim)\n",
+    "    Add & Norm\n",
+    "    ProjectionLayer( 768 , 3072 )\n",
+    "    Activation\n",
+    "    ProjectionLayer( 3072 , 768 )\n",
+    "    Add & Norm\n",
+    "])\n",
+    "## Explaination\n",
+    "\n",
+    "The token are prepended with a special token [CLS] and appended with a special token [SEP]\n",
+    "The token are then passed through the embedding layer and the positional encoding layer\n",
+    "The output of the positional encoding layer is passed through the 12 encoder blocks\n",
+    "So the batch shape is (batch_size, seq_len, 768)\n",
+    "The output of the last encoder block is passed through a linear layer to get the logits\n",
+    "Note that 768 is the hidden size of the model and the size of the embedding token\n",
+    "## Training\n",
+    "The output of the last encoder block is clipped to the first token [CLS]\n",
+    "Vocab size is the number of classes\n",
+    "The encoder block are trained in pretraining, the linear layer is trained in fine-tuning by prepending the sequences with a  [CLS] and training the model to predict the class of the sequence\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
