Bert attention block implementation

--- a/bert.ipynb
+++ b/bert.ipynb
@@ -10,6 +10,152 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Package                  Version\n",
+      "------------------------ --------------------\n",
+      "anyio                    3.7.0\n",
+      "argon2-cffi              21.3.0\n",
+      "argon2-cffi-bindings     21.2.0\n",
+      "arrow                    1.2.3\n",
+      "asttokens                2.2.1\n",
+      "async-lru                2.0.2\n",
+      "attrs                    23.1.0\n",
+      "Babel                    2.12.1\n",
+      "backcall                 0.2.0\n",
+      "beautifulsoup4           4.12.2\n",
+      "bleach                   6.0.0\n",
+      "certifi                  2019.11.28\n",
+      "cffi                     1.15.1\n",
+      "chardet                  3.0.4\n",
+      "charset-normalizer       3.1.0\n",
+      "comm                     0.1.3\n",
+      "dbus-python              1.2.16\n",
+      "debugpy                  1.6.7\n",
+      "decorator                5.1.1\n",
+      "defusedxml               0.7.1\n",
+      "exceptiongroup           1.1.1\n",
+      "executing                1.2.0\n",
+      "fastjsonschema           2.17.1\n",
+      "fqdn                     1.5.1\n",
+      "idna                     2.8\n",
+      "ipykernel                6.23.3\n",
+      "ipython                  8.14.0\n",
+      "isoduration              20.11.0\n",
+      "jedi                     0.18.2\n",
+      "Jinja2                   3.1.2\n",
+      "json5                    0.9.14\n",
+      "jsonpointer              2.4\n",
+      "jsonschema               4.17.3\n",
+      "jupyter_client           8.3.0\n",
+      "jupyter_core             5.3.1\n",
+      "jupyter-events           0.6.3\n",
+      "jupyter-lsp              2.2.0\n",
+      "jupyter_server           2.7.0\n",
+      "jupyter_server_terminals 0.4.4\n",
+      "jupyterlab               4.0.2\n",
+      "jupyterlab-pygments      0.2.2\n",
+      "jupyterlab_server        2.23.0\n",
+      "MarkupSafe               2.1.3\n",
+      "matplotlib-inline        0.1.6\n",
+      "mistune                  3.0.1\n",
+      "nbclient                 0.8.0\n",
+      "nbconvert                7.6.0\n",
+      "nbformat                 5.9.0\n",
+      "nest-asyncio             1.5.6\n",
+      "notebook_shim            0.2.3\n",
+      "overrides                7.3.1\n",
+      "packaging                23.1\n",
+      "pandocfilters            1.5.0\n",
+      "parso                    0.8.3\n",
+      "pexpect                  4.8.0\n",
+      "pickleshare              0.7.5\n",
+      "pip                      23.1.2\n",
+      "platformdirs             3.8.0\n",
+      "prometheus-client        0.17.0\n",
+      "prompt-toolkit           3.0.38\n",
+      "psutil                   5.9.5\n",
+      "ptyprocess               0.7.0\n",
+      "pure-eval                0.2.2\n",
+      "pycparser                2.21\n",
+      "Pygments                 2.15.1\n",
+      "PyGObject                3.36.0\n",
+      "pyrsistent               0.19.3\n",
+      "python-apt               2.0.1+ubuntu0.20.4.1\n",
+      "python-dateutil          2.8.2\n",
+      "python-json-logger       2.0.7\n",
+      "PyYAML                   6.0\n",
+      "pyzmq                    25.1.0\n",
+      "requests                 2.31.0\n",
+      "requests-unixsocket      0.2.0\n",
+      "rfc3339-validator        0.1.4\n",
+      "rfc3986-validator        0.1.1\n",
+      "Send2Trash               1.8.2\n",
+      "setuptools               68.0.0\n",
+      "six                      1.14.0\n",
+      "sniffio                  1.3.0\n",
+      "soupsieve                2.4.1\n",
+      "stack-data               0.6.2\n",
+      "terminado                0.17.1\n",
+      "tinycss2                 1.2.1\n",
+      "tomli                    2.0.1\n",
+      "tornado                  6.3.2\n",
+      "traitlets                5.9.0\n",
+      "typing_extensions        4.6.3\n",
+      "uri-template             1.3.0\n",
+      "urllib3                  1.25.8\n",
+      "wcwidth                  0.2.6\n",
+      "webcolors                1.13\n",
+      "webencodings             0.5.1\n",
+      "websocket-client         1.6.1\n",
+      "wheel                    0.40.0\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.1.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.2.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython -m pip install --upgrade pip\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip list\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NGC-DL-CONTAINER-LICENSE  home\t       media\t      run\tusr\n",
+      "bin\t\t\t  jupyter.log  mnt\t      sbin\tvar\n",
+      "boot\t\t\t  lib\t       opt\t      srv\tworkspace\n",
+      "dev\t\t\t  lib32        post_start.sh  start.sh\n",
+      "etc\t\t\t  lib64        proc\t      sys\n",
+      "get-pip.py\t\t  libx32       root\t      tmp\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "!ls\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
@@ -106,6 +252,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Path: bert.ipynb\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "class BERTBlock(nn.Module):\n",
+    "\n",
+    "    hidden_layer = 768\n",
+    "    def __init__(self, token_size):\n",
+    "        super().__init__()\n",
+    "        self.attn = nn.MultiheadAttention( token_size, num_heads=8, batch_first=True)\n",
+    "        self.qkv = nn.Linear(token_size, self.hidden_layer * 3)\n",
+    "        # self.Q = nn.Linear(input_size, self.hidden_size)\n",
+    "        # self.K = nn.Linear(input_size, self.hidden_size)\n",
+    "        # self.V = nn.Linear(input_size, self.hidden_size)\n",
+    "\n",
+    "        self.proj_h = nn.Linear(self.hidden_layer, self.hidden_layer*4)\n",
+    "        self.proj_out = nn.Linear(self.hidden_layer*4, token_size)\n",
+    "        self.act = nn.Sigmoid()\n",
+    "        self.dropout = nn.Dropout(0.1)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        # X.shape = (batch_size, seq_len, input_size)\n",
+    "        # q = self.Q(x) # (batch_size, seq_len, hidden_size)\n",
+    "        # k = self.K(x) # (batch_size, seq_len, hidden_size)\n",
+    "        # v = self.V(x) # (batch_size, seq_len, hidden_size)\n",
+    "        qkv = self.qkv(x)\n",
+    "        q, k, v = torch.chunk( qkv, 3, dim=-1)\n",
+    "        x ,_= self.attn(q, k, v)\n",
+    "        x = self.proj_h(x)\n",
+    "        x =self.proj_out(x)\n",
+    "        x = self.act(x)\n",
+    "        x = self.dropout(x)\n",
+    "\n",
+    "        return x\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -113,9 +303,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 10, 2304])\n",
+      "torch.Size([1, 10, 768]) torch.Size([1, 10, 768]) torch.Size([1, 10, 768])\n",
+      "torch.Size([1, 10, 768]) torch.Size([1, 10, 768]) torch.Size([1, 10, 768])\n",
+      "tensor([0.]) tensor([0.]) tensor([0.])\n"
+     ]
+    }
+   ],
    "source": []
   },
   {
@@ -128,21 +329,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.12"
   }
  },
  "nbformat": 4,
