initial  bert sequential model implementation

--- a/bert.ipynb
+++ b/bert.ipynb
@@ -299,7 +299,31 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "class Bert(nn.Module):\n",
+    "    hid = 768\n",
+    "\n",
+    "    def __init__(self, input_size, output_size):\n",
+    "        super().__init__()\n",
+    "        self.bert_blocks = nn.ModuleList(\n",
+    "            [BERTBlock(input_size) for _ in range(12)]\n",
+    "        )\n",
+    "        self.final = nn.Linear(1, self.hid)\n",
+    "        self.out = nn.Linear(self.hid, output_size)\n",
+    "        self.act = nn.Sigmoid()\n",
+    "\n",
+    "        self.dropout = nn.Dropout(0.1)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        for block in self.bert_blocks:\n",
+    "            x = block(x)\n",
+    "        # x.shape = (batch_size, seq_len, hidden_size)\n",
+    "\n",
+    "        x = self.final(x)\n",
+    "\n",
+    "        return x\n"
+   ]
   },
   {
    "cell_type": "code",
