test torch split and chink function in and out shape

--- a/bert.ipynb
+++ b/bert.ipynb
@@ -341,7 +341,18 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "\n",
+    "rand_qkv = torch.rand(1, 10, 768 * 3)\n",
+    "print(rand_qkv.shape)\n",
+    "q, k, v = torch.chunk(rand_qkv, 3, dim=-1)\n",
+    "q1, k1, v1 = torch.split(rand_qkv, 768, dim=-1)\n",
+    "print(q.shape, k.shape, v.shape)\n",
+    "print(q1.shape, k1.shape, v1.shape)\n",
+    "\n",
+    "l2_norm = lambda x: torch.sqrt(torch.sum(x**2, dim=(-1, -2)))\n",
+    "print(l2_norm(q - q1), l2_norm(k - k1), l2_norm(v - v1))\n"
+   ]
   },
   {
    "cell_type": "code",
